@@ -2,6 +2,7 @@
 ==== Core ====
   * Implement #1063 option to delete torrent file copy on torrent removal - patch from Ghent
   * Implement #457 progress bars for folders
+  * Implement #1012 httpdownloader supports gzip decoding
   * #496: Remove deprecated functions in favour of get_session_status()
 
 ==== Blocklist ====
